--- a/pages/before.html
+++ b/pages/before.html
@@ -2,12 +2,21 @@
 		<div class="main__top-image"></div>	
 		<div class="main__mid-image"></div>	
 		<div class="main__cursive-text"></div>	
-		<div class="main__info-text"></div>	
+		<div class="main__info-text">
+			<h1>Did you know</h1>
+			<span>Colgate has donated over <b>1,000,000</b> toothbrushes and toothpastes to Plunket!</span>
+		</div>	
 		<div class="main__instruction-text"></div>
-		<!-- <form class="comp-form">
-			<div class=""></div>
-			<input type="text" placeholder="First name" ng-model="user.first-name">
-			<input type="text" placeholder="Last name" ng-model="user.last-name">
-			<input type="email" placeholder="Email address" ng-model="user.email">
-		</form> -->
+		<form class="comp">
+			<div class="comp__upload">
+				<div class="comp__upload-button comp__upload-button--photo"></div>
+				<div class="comp__upload-button comp__upload-button--video"></div>
+			</div>
+			<div class="comp__form">
+				<input type="text" placeholder="First name">
+				<input type="text" placeholder="Last name">
+				<br>
+				<input type="email" placeholder="Email address">
+			</div>
+		</form>
 </div>
