add instructions text

--- a/pages/before.html
+++ b/pages/before.html
@@ -6,7 +6,7 @@
 			<h1>Did you know</h1>
 			<span>Colgate has donated over <b>1,000,000</b> toothbrushes and toothpastes to Plunket!</span>
 		</div>	
-		<div class="main__instruction-text"></div>
+		<div class="main__instruction-text">Simply enter your details below and upload a photo or video of your child giggling and you’re in the draw to win one of ten Colgate kids prize packs.</div>
 		<form class="comp">
 			<div class="comp__upload">
 				<div class="comp__upload-button comp__upload-button--photo"></div>
