add after submit page

--- a/pages/after.html
+++ b/pages/after.html
@@ -1,15 +1,18 @@
 <div class="main">
-	<div class="inner-container">
 		<div class="main__top-image"></div>	
 		<div class="main__mid-image"></div>	
 		<div class="main__cursive-text"></div>	
-		<div class="main__info-text"></div>	
-		<div class="main__instruction-text"></div>
-		<form class="comp-form">
-			<div class=""></div>
-			<input type="text" placeholder="First name" ng-model="user.first-name">
-			<input type="text" placeholder="Last name" ng-model="user.last-name">
-			<input type="email" placeholder="Email address" ng-model="user.email">
+		<div class="main__info-text">
+			<h1>Thanks!</h1>
+			<span>You're in the draw to win one of ten Colgate kids prize Packs!</span>
+		</div>	
+		<div class="main__instruction-text main__instruction-text--after-submit">Share on</div>
+		<form class="comp">
+			<div class="comp__upload comp__upload--after-submit">
+				<div class="comp__upload-button comp__upload-button--facebook"></div>
+				<div class="comp__upload-button comp__upload-button--twitter"></div>
+				<div class="comp__upload-button comp__upload-button--email"></div>
+			</div>
 		</form>
-	</div>
+		<div class="main__after-submit-image"></div>
 </div>
