add submit button

--- a/pages/before.html
+++ b/pages/before.html
@@ -18,5 +18,6 @@
 				<br>
 				<input type="email" placeholder="Email address">
 			</div>
+			<div class="comp__submit">Submit</div>
 		</form>
 </div>
